--- a/secuoyas-code/package.json
+++ b/secuoyas-code/package.json
@@ -11,6 +11,11 @@
     "Themes"
   ],
   "icon": "icon.png",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Secuoyas-Experience/secuoyas-theme"
+  }
+
   "contributes": {
     "themes": [
       {
