remove activation-events

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "Secuoyas VS Code Themes",
   "version": "0.1.7",
   "publisher": "Secuoyas",
-  "description": "company theme made at Secuoyas - a theme designed with care for better coding and improved developer experience",
+  "description": "Company theme made at Secuoyas - a theme designed with care for better coding and improved developer experience",
   "author": {
     "name": "Secuoyas"
   },
